mb.mediaEmbedder changeLog file

--- a/demo.html
+++ b/demo.html
@@ -42,7 +42,7 @@
       }
 
       $(function(){
-        $.mb_videoEmbedder.defaults.width=300;
+        $.mb_videoEmbedder.defaults.width=500;
         $("#example").mb_embedMovies();
         $("#example").mb_embedAudio();
       });
@@ -83,15 +83,15 @@
   <br>
   <div id="example">
     <h1>Vimeo</h1>
-    [vimeo=http://www.vimeo.com/109467]<br><br>
+    [vimeo=http://www.vimeo.com/109467]
     <h1>Youtube</h1>
-    [youtube=http://www.youtube.com/watch?v=PLs5HN7FS0w]<br><br>
+    [youtube=http://www.youtube.com/watch?v=PLs5HN7FS0w]
     <h1>Flickr</h1>
-    [flickr=http://www.flickr.com/photos/danielofredorota/3182095499/]<br><br>
+    [flickr=http://www.flickr.com/photos/danielofredorota/3182095499/]
     <h1>livestream</h1>
-    [livestream=http://www.livestream.com/fox8news]<br><br>  <!-- http://www.livestream.com/academyawards-->
+    [livestream=http://www.livestream.com/fox8news] <!-- http://www.livestream.com/academyawards-->
     <h1>Ustream</h1>
-    [ustream=http://www.ustream.tv/recorded/2691132]<br><br>
+    [ustream=http://www.ustream.tv/recorded/2691132]
     <h1>audio files</h1>
     [audio=http://dl.dropbox.com/u/1976976/linea_gialla.mp3&titles=linea gialla]
   </div>
